// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders while running 1`] = `
<div
  class="sc-dmyDmy jsbLUa"
>
  <div
    class="sc-eDLKEg dxzole"
  >
    <span
      class="sc-jTQDJr"
    >
      0
    </span>
    <span
      class="sc-gLLuHO flfJaR"
    >
      42
    </span>
  </div>
  <button
    class="sc-beyTiQ sc-guDMob heAGpe jJSLzA"
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  class="sc-dmyDmy jsbLUa"
>
  <div
    class="sc-hLQTFJ krhgFG"
  >
    🛌🛌
  </div>
  <button
    class="sc-beyTiQ sc-guDMob dFRMQp jJSLzA"
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  class="sc-dmyDmy jsbLUa"
>
  <div
    class="sc-hLQTFJ krhgFG"
  >
    🍅
  </div>
  <button
    class="sc-beyTiQ sc-guDMob dFRMQp jJSLzA"
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  class="sc-dmyDmy jsbLUa"
>
  <div
    class="sc-hLQTFJ krhgFG"
  >
    🛌
  </div>
  <button
    class="sc-beyTiQ sc-guDMob dFRMQp jJSLzA"
  >
    Start
  </button>
</div>
`;
